# frogger-clone

./: CMakeLists.txt  README.md
res/shaders/: texturedfragment.shader  texturedvertex.shader  vertex.shader
src/core/: entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  game.cpp  game.h  input.cpp
src/gui/: gui.cpp  gui.h  guimanager.cpp  guimanager.h
src/renderer/: buffer.cpp  buffer.h  context.cpp  context.h  graphics.cpp  graphics.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
src/utils/: debug.cpp  instrumentor.h  log.h  statistics.h
